--- a/_pages/404.md
+++ b/_pages/404.md
@@ -2,9 +2,11 @@
 title: "Page Not Found"
 layout: single
 excerpt: "Page not found. Your data is in another cloud."
-sitemap: flase
+sitemap: false
 permalink: /404.html
 ---
+
+Sorry, the page you were trying to view does not exist --- perhaps you can try searching for it below.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
